--- a/style.css
+++ b/style.css
@@ -53,6 +53,13 @@ body{
 /******************HOME PAGE*****************/
 
 #home-logo-img{
+    width: 50px;
+    display: block;
+    margin: auto;
+    padding: 25px 10px 10px 10px;
+}
+
+#home-logo-text{
     width: 200px;
     display: block;
     margin: auto;
@@ -60,6 +67,7 @@ body{
     margin-bottom: 50px;
     box-shadow: 0 10px 5px 5px darkgoldenrod;
     border-radius: 100%;
+    
 }
 
 /******************HOME PAGE MENU************/
@@ -154,7 +162,7 @@ body{
 }
 
 .recipe-details-info p{
-    font-size: 15px;
+    font-size: 13px;
     display: inline-block;
 }
 
@@ -163,25 +171,43 @@ body{
     margin-left: 10px;
 }
 
+.recipe-details-steps{
+    padding-top: 20px;
+}
+
+.recipe-details-steps ol{
+    padding-left: 28px;
+}
+
 
 
 /******************BUTTON************/
 
-button{
-    font-size:1rem;
+.button { 
+    position: absolute;
+    left: 10%;
+    background: linear-gradient(
+        130deg,
+        #6f6df4,
+        #4c46f5);
+    text-decoration: none;
     border: none;
-    outline: none;
-    padding: 10px 12px;
-    border-radius: 10px;
-    background-color: forestgreen;
-    color: white;
+    padding: 10px 20px;
+    border-radius: 6px;
+    color: black;
     
-    cursor: pointer;
-    z-index: 0;
-    
-    display: block;
-    margin: auto;
+    transition: 0.2s;
+  
+    margin-top: 10px;
+    margin-bottom: 10px;
+      
 }
+
+
+.button:hover{
+    box-shadow: 0 0 0 4px #fff, 0 0 0 8px #4070f4;
+}
+
 
 
 /******************RESPONSIVE LAYOUT************/
